--- a/src/page/tour/index.css
+++ b/src/page/tour/index.css
@@ -2,12 +2,12 @@
 * @Author: Administrator
 * @Date:   2017-09-14 10:01:13
 * @Last Modified by:   Administrator
-* @Last Modified time: 2017-09-14 14:53:02
+* @Last Modified time: 2017-09-14 17:56:00
 */
 
 /* 两栏布局 */
 .layout-tow{
-	overflow: hidden;
+	display: table;
 }
 .nav-sad{
 	float: left;
@@ -15,8 +15,9 @@
 	min-height: 500px;
 }
 .contentbox {
-	overflow: hidden;
-	width: calc(100% - 230px-30px);
+	display: table;
+	width: calc(100% - 230px - 30px);
+	width: -webkit-calc(100% - 230px - 30px);
 	min-height: 600px;
 	padding-left: 30px;
 	padding-top: 17px;
