--- a/src/view/layout/nav-sad.html
+++ b/src/view/layout/nav-sad.html
@@ -1,71 +1,69 @@
 <div class="main-menu">
-                    <ul>
-                        <li class="active">
-                            <a href="" title="">主要活动</a>
-                            
-                        </li>
-                        <li>
-                            <a href="" title="">周末趣玩</a>
-                            <div class="menubox">
-                                <p>
-                                    <a href="" title="">短途度假</a>
-                                    <a href="" title="">主题乐园</a>
-                                    <a href="" title="">特色古镇</a>
-                                    
-                                </p>
-                                <p>
-                                    <a href="" title="">游山玩水</a>
-                                    <a href="" title=""></a>
-                                    <a href="" title=""></a>
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <a href="" title="">快乐度假</a>
-                            <div class="menubox">
-                                <p>
-                                    <a href="" title="">四川</a>
-                                    <a href="" title="">海南</a>
-                                    <a href="" title="">泰国</a>
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="left-lebox activemag">
-                    <div class="titleof">
-                       <a href="" title="">最新活动</a>
-                       <a href="" title="">活动回顾</a>
-                    </div>
-                    <p class="newMag">
-                        <a href="" title="">住无锡田园东方花间堂稼圃住无锡田园东方花间堂稼圃住无锡田园东方花间堂稼圃</a>
-                        <a href="" title="">住无锡田园东方花间堂稼圃...</a>
-                        <a href="" title="">住无锡田园东方花间堂稼圃...</a>
-                        <a href="" title="">住无锡田园东方花间堂稼圃...</a> 
-                        <a href="" title="">住无锡田园东方花间堂稼圃...</a>
-                    </p>
-                </div>
-                <div class="left-lebox join-in">
-                    <div class="titleof">
-                       <a href="" title="">加盟申请</a>
-                       <a href="" title="">在线留言</a>
-                    </div>
-                    <ul class="mag-self">
-                        <li>
-                            <label for="" class="icon" data-num="">姓名:</label>
-                            <input type="text">
-                        </li>
-                        <li>
-                            <label for="" class="icon" data-num="">地区:</label>
-                            <input type="text">
-                        </li>
-                        <li>
-                            <label for="" class="icon" data-num="">电话:</label>
-                            <input type="text">
-                        </li>
-                        <li>
-                            <label for="" class="icon" data-num="">备注:</label>
-                            <input type="text">
-                        </li>
-                    </ul>
-                </div>
+    <ul>
+        <li class="active">
+            <a href="" title="">主要活动</a>
+        </li>
+        <li>
+            <a href="" title="">周末趣玩</a>
+            <div class="menubox">
+                <p>
+                    <a href="" title="">短途度假</a>
+                    <a href="" title="">主题乐园</a>
+                    <a href="" title="">特色古镇</a>
+                </p>
+                <p>
+                    <a href="" title="">游山玩水</a>
+                    <a href="" title=""></a>
+                    <a href="" title=""></a>
+                </p>
+            </div>
+        </li>
+        <li>
+            <a href="" title="">快乐度假</a>
+            <div class="menubox">
+                <p>
+                    <a href="" title="">四川</a>
+                    <a href="" title="">海南</a>
+                    <a href="" title="">泰国</a>
+                </p>
+            </div>
+        </li>
+    </ul>
+</div>
+<div class="left-lebox activemag">
+    <div class="titleof">
+        <a href="" title="">最新活动</a>
+        <a href="" title="">活动回顾</a>
+    </div>
+    <p class="newMag">
+        <a href="" title="">住无锡田园东方花间堂稼圃住无锡田园东方花间堂稼圃住无锡田园东方花间堂稼圃</a>
+        <a href="" title="">住无锡田园东方花间堂稼圃...</a>
+        <a href="" title="">住无锡田园东方花间堂稼圃...</a>
+        <a href="" title="">住无锡田园东方花间堂稼圃...</a>
+        <a href="" title="">住无锡田园东方花间堂稼圃...</a>
+    </p>
+</div>
+<div class="left-lebox join-in">
+    <div class="titleof">
+        <a href="" title="">加盟申请</a>
+        <a href="" title="">在线留言</a>
+    </div>
+    <ul class="mag-self">
+        <li>
+            <label for="" class="icon" data-num="5">姓名:</label>
+            <input type="text">
+        </li>
+        <li>
+            <label for="" class="icon" data-num="35">地区:</label>
+            <input type="text">
+        </li>
+        <li>
+            <label for="" class="icon" data-num="65">电话:</label>
+            <input type="text">
+        </li>
+        <li>
+            <label for="" class="icon" data-num="95">备注:</label>
+            <input type="text">
+        </li>
+    </ul>
+</div>
