--- a/src/page/common/nav-sad/index.css
+++ b/src/page/common/nav-sad/index.css
@@ -2,7 +2,7 @@
 * @Author: Administrator
 * @Date:   2017-09-14 09:57:38
 * @Last Modified by:   Administrator
-* @Last Modified time: 2017-09-14 17:57:52
+* @Last Modified time: 2017-09-15 09:09:07
 */
 /* 左侧菜单导航 */
 .layout-tow .nav-sad .main-menu{
@@ -34,7 +34,9 @@
 	border-top: 1px solid #0075a9;
 	border-right: 1px solid #0075a9;
 	line-height: 30px;
-	width: calc(100%/3);
+	width: 76px;
+	float: left;
+	box-sizing: border-box;
 }
 .layout-tow .nav-sad .main-menu li div.menubox p a.active{
 	background-color: #1674AA;
